--- a/check.html
+++ b/check.html
@@ -11,13 +11,14 @@
 </head>
 
 <body>
-    <div class="home__sub">
-        <div style="background-color: red;" class="item item1">item1</div>
-        <div style="background-color: yellow;" class="item item2">item2</div>
-        <div style="background-color: red;" class="item item3">item3</div>
-        <div style="background-color: yellow;" class="item item4">item4</div>
-        <div style="background-color: red;" class="item item5">item5</div>
-        <div style="background-color: blue;" class="item item6">item6</div>
+    <h2>Maintain Aspect Ratio 1:1</h2>
+    <p>Resize the window to see the effect.</p>
+
+    <div class="container">
+        <div class="text">1:1 Aspect ratio</div>
+        <div class="text">1:1 Aspect ratio</div>
+        <div class="text">1:1 Aspect ratio</div>
+        <div class="text">1:1 Aspect ratio</div>
     </div>
 </body>
 
