--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img src="./assets/header__banner.png" />
         </div>
         <ul class="navbar__main">
-            <li class="navbar__main--list"><a class="navbar__main--link" href="#header">HOME</a></li>
+            <li class="navbar__main--list"><a class="navbar__main--link" href="#home">HOME</a></li>
             <li class="navbar__main--list"><a class="navbar__main--link" href="#about">ABOUT</a></li>
             <li class="navbar__main--list"><a class="navbar__main--link" href="#">MODELS</a>
                 <ul class="navbar__branch">
@@ -41,10 +41,10 @@
 
     <section id="home">
         <div class="home__main">
-            <div>
+            <div class="home__block--left">
                 <img class="home__main--left" src="./assets/home__main--left.png" />
             </div>
-            <div>
+            <div class="home__block--center">
                 <div>
                     <img class="home__banner--central" src="./assets/home__banner--central.png" />
                 </div>
@@ -52,7 +52,7 @@
                     <img class="home__main--bottom" src="./assets/home__main--bottom.png" />
                 </div>
             </div>
-            <div>
+            <div class="home__block--right">
                 <img class="home__main--right" src="./assets/home__main--right.png" />
             </div>
         </div>
@@ -66,11 +66,22 @@
         </div>
     </section>
 
-    <!-- <section id="footer">
-        <div class="footer__img">
-            <img src="./assets/footer__img.png" />
+    <section id="about">
+        <div class="about__content">
+            <p class="title">AMAZING EXPERIENCE</p>
+            <p class="word">ON THE ROAD STRAIGHT TO THE END OF THE WAY</p>
         </div>
-    </section> -->
+            <div class="about__picture--first"></div>
+            <div class="about__picture--second"></div>
+            <div class="about__picture--third"></div>
+            <div class="about__picture--fourth"></div>
+    </section>
+
+    <section id="footer">
+        <div class="footer__banner">
+            <img src="./assets/footer__banner.png" />
+        </div>
+    </section>
     <script src="./js/index.js"></script>
 </body>
 
