Update link file in index.html file

--- a/index.html
+++ b/index.html
@@ -274,7 +274,9 @@
             <div class="projects__modal">
               <span class="projects__subtitle">VBA-EXCEL </span>
               <h2 class="projects__title">DATA SYNTHESIS</h2>
-              <a href="#" class="projects__button"
+              <a
+                href="./assets/project/HL DCD TEMPLATE.xlsb"
+                class="projects__button"
                 >View demo
                 <i><i class="fa-sharp fa-regular fa-link"></i></i>
               </a>
