--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
     <!-- <h1>6273648hjklasndf</h1>
       <h2>62763728</h2> -->
     <footer></footer>
-    <script src="./js/index.js"></script>
+    <script src="./js/array.js"></script>
   </body>
 </html>
