--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <li>Graphics and image processing skills</li>
             <li>Knowledge of marketing</li>
             <li>User experience (UX) knowledge</li>
-            <li>Creative thinking and project implementation</li>
+            <li>Creative thinking and project</li>
             <li>The spirit of research and learning</li>
           </ol>
           <a href="#" class="btn">Read More</a>
