--- a/index.html
+++ b/index.html
@@ -4,21 +4,47 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,300;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./css/index.css" />
-    <title>Document</title>
+    <link rel="stylesheet" href="/index.css" />
+    <title>bai tap html-css</title>
   </head>
   <body>
-    <a
-      href="https://www.figma.com/file/czYZ6RrkXMqAEG1LAllY8n/Whitepace---SaaS-Landing-Page-(Community)?node-id=5-34420&t=FhZ2kDmNpasjdSXZ-0"
-    >
-      Đường link figma</a
-    >
-    <script src="./js/index.js"></script>
+    <header class="header" id="header">
+      <nav class="nav__container">
+        <a href="#" class="nav__logo">
+          <img src="./acssets/img/img_logo.png" alt="logo" />
+        </a>
+
+        <div class="nav__menu" id="nav-menu">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#" class="nav__link">Products</a>
+            </li>
+
+            <li class="nav__item">
+              <a href="#" class="nav__link">Solutions</a>
+            </li>
+
+            <li class="nav__item">
+              <a href="#" class="nav__link">Resources</a>
+            </li>
+
+            <li class="nav__item">
+              <a href="#" class="nav__link">Spricing</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="nav__button">
+          <a href="#" class="nav__login">Login</a>
+          <a href="#" class="nav__try">Try Whitepace free</a>
+          <i class="fa-solid fa-arrow-right"></i>
+        </div>
+      </nav>
+    </header>
+
+    <script
+      src="https://kit.fontawesome.com/a2eca21ea1.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
