--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="index.css" />
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" /> -->
 </head>
 <body>
     <img src="./assets/images/img_logo.png" />
@@ -21,7 +22,9 @@
     <div class="navbar">Pricing
         <i class="fa-regular fa-chevron-down"></i>
     </div>
+    <i class="fa-light fa-chevron-down"></i>
     <button>Login</button>
     <button>Try Whitepace free</button>
+    <script src="https://kit.fontawesome.com/1c39565260.js" crossorigin="anonymous"></script>
 </body>
 </html>
