--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
 
         <div class="nav__button">
           <a href="#" class="nav__login">Login</a>
-          <a href="#" class="nav__try">Try Whitepace free</a>
-          <i class="fa-solid fa-arrow-right"></i>
+          <a href="#" class="nav__try"
+            >Try Whitepace free
+            <i class="fa-solid fa-arrow-right"></i>
+          </a>
         </div>
       </nav>
     </header>
