--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 
 <body>
     <section id="header">
-        <div class="header__banner">
-            <img src="./assets/header__banner.png" />
-        </div>
+        <div class="header__banner"><img src="./assets/header__banner.png" /></div>
         <ul class="navbar__main">
             <li class="navbar__main--list"><a class="navbar__main--link" href="#home">HOME</a></li>
             <li class="navbar__main--list"><a class="navbar__main--link" href="#about">ABOUT</a></li>
@@ -62,18 +60,16 @@
     </section>
 
     <section id="about">
-        <div class="about__block--first"><img class="about__picture--first" src="./assets/about__picture--first.png" /></div>
-        <div class="about__block--second"><img class="about__picture--second" src="./assets/about__picture--second.png" /></div>
-        <div class="about__block--third"><img class="about__picture--third" src="./assets/about__picture--third.png" /></div>
-        <div class="about__block--fourth"><img class="about__picture--fourth" src="./assets/about__picture--fourth.png" /></div>
+        <div class="about__block about__block--first"><img class="about__picture about__picture--first" src="./assets/about__picture--first.png" /></div>
+        <div class="about__block about__block--second"><img class="about__picture about__picture--second" src="./assets/about__picture--second.png" /></div>
+        <div class="about__block about__block--third"><img class="about__picture about__picture--third" src="./assets/about__picture--third.png" /></div>
+        <div class="about__block about__block--fourth"><img class="about__picture about__picture--fourth" src="./assets/about__picture--fourth.png" /></div>
         <p class="about__content--first">FANTASTIC EXPERIENCE</p>
         <p class="about__content--second">COOL DRIVING CONQUER EVERY TOUGH TERRAIN</p>
     </section>
 
     <section id="footer">
-        <div class="footer__banner">
-            <img src="./assets/footer__banner.png" />
-        </div>
+        <div class="footer__banner"><img src="./assets/footer__banner.png" /></div>
     </section>
     <script src="./js/index.js"></script>
 </body>
