--- a/html/homework.html
+++ b/html/homework.html
@@ -72,6 +72,48 @@ cho chuỗi A = ‘Học Javascript Front    End tại Nestech   ,Quận 10’
       console.log('length =', b.length);
       console.log(b + ' ' + c);
       // bài 5
+     const characters = [
+    {
+        name: 'Luke Skywalker',
+        height: '172',
+        mass: '77',
+        eye_color: 'blue',
+        gender: 'male',
+    },
+    {
+        name: 'Darth Vader',
+        height: '202',
+        mass: '136',
+        eye_color: 'yellow',
+        gender: 'male',
+    },
+    {
+        name: 'Leia Organa',
+        height: '150',
+        mass: '49',
+        eye_color: 'brown',
+        gender: 'female',
+    },
+    {
+        name: 'Anakin Skywalker',
+        height: '188',
+        mass: '84',
+        eye_color: 'blue',
+        gender: 'male',
+    },
+];
+//1. Get an array of all heights, name
+for(var i = 0;i<characters.length;i++){
+  console.log("height: ",characters[i].height,"name: ",characters[i].name); 
+}
+//2. get list actor name which height taller than 170
+let new_array01=[];
+for(var i = 0;i<characters.length;i++){
+ if(parseInt(characters[i].height>170)){
+  new_array01.push(characters[i]);
+ }
+}
+console.log("arr:",new_array01);
     </script>
   </body>
 </html>
