--- a/html/index.html
+++ b/html/index.html
@@ -1,64 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ThanhDi721</title>
-</head>
-</head>
-<link rel="stylesheet" type="text/css" href="/css/style.css">
-<link rel="preconnect" href="https://fonts.googleapis.com">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href='https://unpkg.com/css.gg@2.0.0/icons/css/chevron-down.css' rel='stylesheet'>
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-
+</head>
 <body>
-  <div class="nav">
+    <div class="nav">
+        <div class="logo">
+            <a href="index.html"><img src="/img/img_logo.png"></a>
+        </div>
+        <div class="nav_item1">
+            <ul>
+                <li><a href="#">Products<i class="gg-chevron-down"></i></a></li>
+                <li><a href="#">Solutions<i class="gg-chevron-down"></i></a></li>
+                <li><a href="#">Resources<i class="gg-chevron-down"></i></a></li>
+                <li><a href="#">Pricing<i class="gg-chevron-down"></i></a></li>
+                <li class="login"><a href="#">Login</a></li>
+                <li class="try"><a href="#">Try Whitepace free</a></li>
+            </ul>
+        </div>       
+    </div>
+    <div class="header">
+        <div class="text_header">
+            <ul>
+                <li>
+                    <h1>Get More Done with whitepace</h1>
+                </li>
+                <li>
+                    <h4>Project management software that enables your teams to collaborate, plan, analyze and manage everyday tasks</h4>
+                </li>
+            </ul>
 
-    <ul>
-      <li><a href="/html/index.html">Profile</a></li>
-      <li><a href="/html/project.html">Project</a></li>
-      <li><a href="/html/future.html">Future</a></li>
- 
-    </ul>
-  </div>
-  <main>
-    <header>
-      <img class="img" src="/img/anh.jpg">
-      <h1>Phan Thanh Dĩ</h1>
-    </header>
-    <ul class="info">
-      <li>
-        <a href="https://www.tiktok.com/@ptd_thanhdi721"> <img class="img" src="/img/tiktok.png" 
-        style="
-    width: 30px;
-    height: 30px;
-    padding-bottom: 10px;">
-    </a>
-      </li>
-
-      <li>
-        <a href="https://www.facebook.com/profile.php?id=100023019017099"><img class="img" src="/img/facebook.png" 
-        style="
-    width: 30px;
-    height: 30px;
-    padding-bottom: 10px;">
-    </a>
-      </li>
-
-      <li>
-        <a href="https://www.youtube.com/channel/UCXkaIbYdw9heSWiGDY8UFrA"><img class="img" src="/img/youtube.png" 
-        style="
-    width: 30px;
-    height: 30px;
-    padding-bottom: 10px;">
-    </a>
-      </li>
-    </ul>
-  </main>
-
-
+        </div>
+        <div class="img_header">
+            <a href="#"><img src="/img/anh.jpg" width= "824px" height="549px"></a>
+        </div>
+    </div>
 </body>
-
 </html>
