--- a/check.html
+++ b/check.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <div><img src="./assets/images/about__image--first.png" /></div>
     <script src="./js/index.js"></script>
 </body>
 
