--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
 
 <body>
     <section id="header">
-        <div class="header__banner"><img src="./assets/header__banner.png" /></div>
+        <div class="header__image--banner"><img src="./assets/images/header__image--banner.png" /></div>
         <ul class="navbar__main">
             <li class="navbar__main--list"><a class="navbar__main--link" href="#home">HOME</a></li>
             <li class="navbar__main--list"><a class="navbar__main--link" href="#about">ABOUT</a></li>
             <li class="navbar__main--list"><a class="navbar__main--link" href="#">MODELS</a>
-                <ul class="navbar__branch">
-                    <li class="navbar__branch--list"><a class="navbar__branch--link" href="#">URUS</a></li>
-                    <li class="navbar__branch--list"><a class="navbar__branch--link" href="#">CAYENNE</a></li>
-                    <li class="navbar__branch--list"><a class="navbar__branch--link" href="#">SORENTO</a></li>
+                <ul class="navbar__sub">
+                    <li class="navbar__sub--list"><a class="navbar__sub--link" href="#">URUS</a></li>
+                    <li class="navbar__sub--list"><a class="navbar__sub--link" href="#">CAYENNE</a></li>
+                    <li class="navbar__sub--list"><a class="navbar__sub--link" href="#">SORENTO</a></li>
                 </ul>
             </li>
             <li class="navbar__main--list"><a class="navbar__main--link" href="#">CONTACT</a>
-                <ul class="navbar__branch">
-                    <li class="navbar__branch--list"><a class="navbar__branch--link" href="#">SHOWROOMS</a></li>
-                    <li class="navbar__branch--list"><a class="navbar__branch--link" href="#footer">INFO</a></li>
+                <ul class="navbar__sub">
+                    <li class="navbar__sub--list"><a class="navbar__sub--link" href="#">REGISTER</a></li>
+                    <li class="navbar__sub--list"><a class="navbar__sub--link" href="#footer">INFO</a></li>
                     <li>
                         <a class="navbar__media--link" href="#"><i class="fa-brands fa-facebook-f"></i></a>
                         <a class="navbar__media--link" href="#"><i class="fa-brands fa-youtube"></i></a>
@@ -38,38 +38,38 @@
     </section>
 
     <section id="home">
-        <div class="home__main">
-            <div class="home__block--left"><img class="home__main--left" src="./assets/home__main--left.png" /></div>
-            <div class="home__block--right"><img class="home__main--right" src="./assets/home__main--right.png" /></div>
-            <div class="home__block--center">
-                <div><img class="home__banner--first" src="./assets/home__banner--first.png" /></div>
-                <div><img class="home__main--bottom" src="./assets/home__main--bottom.png" /></div>
-                <p class="home__content--first">URUS</p>
+        <div class="home__block--main">
+            <div class="home__block--main-left"><img class="home__image--main-left" src="./assets/images/home__image--main-left.png" /></div>
+            <div class="home__block--main-right"><img class="home__image--main-right" src="./assets/images/home__image--main-right.png" /></div>
+            <div class="home__block--main-center">
+                <div class="home__block--banner-first"><img class="home__image--banner-first" src="./assets/images/home__image--banner-first.png" /></div>
+                <div class="home__block--main-bottom"><img class="home__image--main-bottom" src="./assets/images/home__image--main-bottom.png" /></div>
+                <div class="home__block--content-first"><p class="home__paragraph--content-first">URUS</p></div>
             </div>
         </div>
-        <div class="home__sub">
-            <img class="home__sub--left" src="./assets/home__sub--left.png" />
-            <img class="home__sub--right" src="./assets/home__sub--right.png" />
-            <img class="home__sub--center" src="./assets/home__sub--center.png" />
-            <img class="home__sub--bottom" src="./assets/home__sub--bottom.png" />
-            <img class="home__banner--second" src="./assets/home__banner--second.png" />
-            <img class="home__banner--third" src="./assets/home__banner--third.png" />
-            <p class="home__content--second">CAYENNE</p>
-            <p class="home__content--third">SORENTO</p>
+        <div class="home__block--sub">
+            <div class="home__block--sub-left"><img class="home__image--sub-left" src="./assets/images/home__image--sub-left.png" /></div>
+            <div class="home__block--sub-right"><img class="home__image--sub-right" src="./assets/images/home__image--sub-right.png" /></div>
+            <div class="home__block--sub-center"><img class="home__image--sub-center" src="./assets/images/home__image--sub-center.png" /></div>
+            <div class="home__block--banner-second"><img class="home__image--banner-second" src="./assets/images/home__image--banner-second.png" /></div>
+            <div class="home__block--banner-third"><img class="home__image--banner-third" src="./assets/images/home__image--banner-third.png" /></div>
+            <div class="home__block--sub-bottom"><img class="home__image--sub-bottom" src="./assets/images/home__image--sub-bottom.png" /></div>
+            <div class="home__block--content-second"><p class="home__paragraph--content-second">CAYENNE</p></div>
+            <div class="home__block--content-third"><p class="home__paragraph--content-third">SORENTO</p></div>
         </div>
     </section>
 
     <section id="about">
-        <div class="about__block about__block--first"><img class="about__picture about__picture--first" src="./assets/about__picture--first.png" /></div>
-        <div class="about__block about__block--second"><img class="about__picture about__picture--second" src="./assets/about__picture--second.png" /></div>
-        <div class="about__block about__block--third"><img class="about__picture about__picture--third" src="./assets/about__picture--third.png" /></div>
-        <div class="about__block about__block--fourth"><img class="about__picture about__picture--fourth" src="./assets/about__picture--fourth.png" /></div>
-        <p class="about__content--first">FANTASTIC EXPERIENCE</p>
-        <p class="about__content--second">COOL DRIVING CONQUER EVERY TOUGH TERRAIN</p>
+        <div class="about__block--banner-first"><img class="about__image--banner about__image--banner-first" src="./assets/images/about__image--banner-first.png" /></div>
+        <div class="about__block--banner-second"><img class="about__image--banner about__image--banner-second" src="./assets/images/about__image--banner-second.png" /></div>
+        <div class="about__block--banner-third"><img class="about__image--banner about__image--banner-third" src="./assets/images/about__image--banner-third.png" /></div>
+        <div class="about__block--banner-fourth"><img class="about__image--banner about__image--banner-fourth" src="./assets/images/about__image--banner-fourth.png" /></div>
+        <div class="about__block--content-first"><p class="about__paragraph--content-first">FANTASTIC EXPERIENCE</p></div>
+        <div class="about__block--content-second"><p class="about__paragraph--content-second">COOL DRIVING CONQUER EVERY TOUGH TERRAIN</p></div>
     </section>
 
     <section id="footer">
-        <div class="footer__banner"><img src="./assets/footer__banner.png" /></div>
+        <div class="footer__image--banner"><img src="./assets/images/footer__image--banner.png" /></div>
     </section>
     <script src="./js/index.js"></script>
 </body>
