--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product</title>
+
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
@@ -12,14 +18,39 @@
     <header class="header">
       <img src="./assets/images/img_logo.png" />
 
-      <div class="navbar">
-        <a href="">Product</a>
-        <a href="">Solutions</a>
-        <a href="">Resources</a>
-        <a href="">Pricing</a>
-        <a href="" class="login">Login</a>
-        <a href="" class="whitespace">Try whitespace free</a>
-      </div>
+      <nav class="navbar">
+        <a href="#"
+          >Product
+          <div class="bx bx-chevron-down" id="down-icon"></div>
+        </a>
+        <a href="#"
+          >Solutions
+          <div class="bx bx-chevron-down" id="down-icon"></div>
+        </a>
+        <a href="#"
+          >Resources
+          <div class="bx bx-chevron-down" id="down-icon"></div>
+        </a>
+        <a href="#"
+          >Pricing
+          <div class="bx bx-chevron-down" id="down-icon"></div>
+        </a>
+        <a href="#" class="login">Login</a>
+        <a href="#" class="whitespace">Try whitespace free</a>
+      </nav>
     </header>
+
+    <!-- design home -->
+    <section class="home" id="home">
+      <div class="home-content">
+        <h2>Get More Done with whitepace</h2>
+        <p>
+          Project management software that enables your teams to collaborate,
+          plan, analyze and manage everyday tasks
+        </p>
+
+        <a href="" class="btn">Try whitespace free</a>
+      </div>
+    </section>
   </body>
 </html>
