--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="home__block--main-left"><img class="home__image--main-left" src="./assets/images/home__image--main-left.png" /></div>
             <div class="home__block--main-right"><img class="home__image--main-right" src="./assets/images/home__image--main-right.png" /></div>
             <div class="home__block--main-center">
-                <div class="home__block--banner-first"><img class="home__image--banner-first" src="./assets/images/home__image--banner-first.png" /></div>
+                <div class="home__block--banner home__block--banner-first"><img class="home__image--banner home__image--banner-first" src="./assets/images/home__image--banner-first.png" /></div>
                 <div class="home__block--main-bottom"><img class="home__image--main-bottom" src="./assets/images/home__image--main-bottom.png" /></div>
                 <div class="home__block--content-first"><p class="home__paragraph--content-first">URUS</p></div>
             </div>
@@ -51,8 +51,8 @@
             <div class="home__block--sub-left"><img class="home__image--sub-left" src="./assets/images/home__image--sub-left.png" /></div>
             <div class="home__block--sub-right"><img class="home__image--sub-right" src="./assets/images/home__image--sub-right.png" /></div>
             <div class="home__block--sub-center"><img class="home__image--sub-center" src="./assets/images/home__image--sub-center.png" /></div>
-            <div class="home__block--banner-second"><img class="home__image--banner-second" src="./assets/images/home__image--banner-second.png" /></div>
-            <div class="home__block--banner-third"><img class="home__image--banner-third" src="./assets/images/home__image--banner-third.png" /></div>
+            <div class="home__block--banner home__block--banner-second"><img class="home__image--banner home__image--banner-second" src="./assets/images/home__image--banner-second.png" /></div>
+            <div class="home__block--banner home__block--banner-third"><img class="home__image--banner home__image--banner-third" src="./assets/images/home__image--banner-third.png" /></div>
             <div class="home__block--sub-bottom"><img class="home__image--sub-bottom" src="./assets/images/home__image--sub-bottom.png" /></div>
             <div class="home__block--content-second"><p class="home__paragraph--content-second">CAYENNE</p></div>
             <div class="home__block--content-third"><p class="home__paragraph--content-third">SORENTO</p></div>
@@ -60,10 +60,10 @@
     </section>
 
     <section id="about">
-        <div class="about__block--banner-first"><img class="about__image--banner about__image--banner-first" src="./assets/images/about__image--banner-first.png" /></div>
-        <div class="about__block--banner-second"><img class="about__image--banner about__image--banner-second" src="./assets/images/about__image--banner-second.png" /></div>
-        <div class="about__block--banner-third"><img class="about__image--banner about__image--banner-third" src="./assets/images/about__image--banner-third.png" /></div>
-        <div class="about__block--banner-fourth"><img class="about__image--banner about__image--banner-fourth" src="./assets/images/about__image--banner-fourth.png" /></div>
+        <div class="about__block--banner about__block--banner-first"><img class="about__image--banner about__image--banner-first" src="./assets/images/about__image--banner-first.png" /></div>
+        <div class="about__block--banner about__block--banner-second"><img class="about__image--banner about__image--banner-second" src="./assets/images/about__image--banner-second.png" /></div>
+        <div class="about__block--banner about__block--banner-third"><img class="about__image--banner about__image--banner-third" src="./assets/images/about__image--banner-third.png" /></div>
+        <div class="about__block--banner about__block--banner-fourth"><img class="about__image--banner about__image--banner-fourth" src="./assets/images/about__image--banner-fourth.png" /></div>
         <div class="about__block--content-first"><p class="about__paragraph--content-first">FANTASTIC EXPERIENCE</p></div>
         <div class="about__block--content-second"><p class="about__paragraph--content-second">COOL DRIVING CONQUER EVERY TOUGH TERRAIN</p></div>
     </section>
