NamNH - Update first section

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               class="first-section__top-header__right-side__list-button__btn-register"
               href="#"
             >
-              <h6>Try Whitepace free</h6>
+              Try Whitepace free
               <img src="./assets/icons/ic_arrowNext-long.png" />
             </a>
           </div>
@@ -83,6 +83,34 @@
             class="first-section__content-top-section__right-side__image-container"
           />
         </div>
+      </div>
+    </section>
+    <section id="second-section">
+      <div class="second-section__image">
+        <img src="./assets/images/img_background.png" />
+      </div>
+      <div class="second-section__first">
+        <div class="second-section__first__left-side">
+          <div>
+            <h4>Project Management</h4>
+            <img src="./assets/images/img_element-text.png" />
+          </div>
+          <h4>
+            Images, videos, PDFs and audio files are supported. Create math
+            expressions and diagrams directly from the app. Take photos with the
+            mobile app and save them to a note.
+          </h4>
+          <a>
+            <h4>Get started</h4>
+            <img src="./assets/icons/ic_arrowNext-long.png" />
+          </a>
+        </div>
+        <div class="second-section__first__right-side">
+          <div class="second-section__first__right-side__image-container" />
+        </div>
+      </div>
+      <div class="second-section__second">
+        <div class="second-section__second__image-container" />
       </div>
     </section>
   </body>
