--- a/index.html
+++ b/index.html
@@ -51,6 +51,18 @@
 
         <a href="" class="btn">Try whitespace free</a>
       </div>
+
+      <div class="home-img">
+        <img src="./assets/images/home-img.png" alt="" />
+      </div>
+    </section>
+
+    <!-- design about  -->
+    <section class="about" id="about">
+      <div class="about-content">
+        <h2></h2>
+        <p></p>
+      </div>
     </section>
   </body>
 </html>
