--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Poppins:wght@400;500;600&family=Roboto:wght@300;500&display=swap"
+      rel="stylesheet"
+    />
     <title>bai tap html-css</title>
   </head>
   <body>
@@ -17,19 +23,31 @@
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list">
             <li class="nav__item">
-              <a href="#" class="nav__link">Products</a>
+              <a href="#" class="nav__link"
+                >Products
+                <i class="fa-sharp fa-solid fa-circle-chevron-down"></i>
+              </a>
             </li>
 
             <li class="nav__item">
-              <a href="#" class="nav__link">Solutions</a>
+              <a href="#" class="nav__link"
+                >Solutions
+                <i class="fa-sharp fa-solid fa-circle-chevron-down"></i>
+              </a>
             </li>
 
             <li class="nav__item">
-              <a href="#" class="nav__link">Resources</a>
+              <a href="#" class="nav__link"
+                >Resources
+                <i class="fa-sharp fa-solid fa-circle-chevron-down"></i>
+              </a>
             </li>
 
             <li class="nav__item">
-              <a href="#" class="nav__link">Spricing</a>
+              <a href="#" class="nav__link"
+                >Spricing
+                <i class="fa-sharp fa-solid fa-circle-chevron-down"></i>
+              </a>
             </li>
           </ul>
         </div>
@@ -43,6 +61,29 @@
         </div>
       </nav>
     </header>
+
+    <section class="container__section1" id="section1">
+      <div>
+        <div>
+          <h3 class="section1__title">Get More Done with <br />whitepace</h3>
+          <p class="section1__content">
+            Project management software that enables your teams to collaborate,
+            plan, <br />
+            analyze and manage everyday tasks
+          </p>
+        </div>
+        <a href="#" class="section1__button">
+          Try Whitepace free
+          <i class="fa-solid fa-arrow-right"></i>
+        </a>
+      </div>
+
+      <div>
+        <div class="section1__img">
+          <img src="./acssets/img/img__image_section1.jpg" alt="..." />
+        </div>
+      </div>
+    </section>
 
     <script
       src="https://kit.fontawesome.com/a2eca21ea1.js"
