--- a/index.html
+++ b/index.html
@@ -23,68 +23,58 @@
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list">
             <li class="nav__item">
-              <a href="#" class="nav__link"
-                >Products
-                <i class="fa-sharp fa-solid fa-circle-chevron-down"></i>
-              </a>
+              <p>Products</p>
+              <i class="fa-sharp fa-solid fa-circle-chevron-down"></i>
             </li>
 
             <li class="nav__item">
-              <a href="#" class="nav__link"
-                >Solutions
-                <i class="fa-sharp fa-solid fa-circle-chevron-down"></i>
-              </a>
+              <p>Solutions</p>
+              <i class="fa-sharp fa-solid fa-circle-chevron-down"></i>
             </li>
 
             <li class="nav__item">
-              <a href="#" class="nav__link"
-                >Resources
-                <i class="fa-sharp fa-solid fa-circle-chevron-down"></i>
-              </a>
+              <p>Resources</p>
+              <i class="fa-sharp fa-solid fa-circle-chevron-down"></i>
             </li>
 
             <li class="nav__item">
-              <a href="#" class="nav__link"
-                >Spricing
-                <i class="fa-sharp fa-solid fa-circle-chevron-down"></i>
-              </a>
+              <p>Spricing</p>
+              <i class="fa-sharp fa-solid fa-circle-chevron-down"></i>
             </li>
           </ul>
-        </div>
 
-        <div class="nav__button">
-          <a href="#" class="nav__login">Login</a>
-          <a href="#" class="nav__try"
-            >Try Whitepace free
-            <i class="fa-solid fa-arrow-right"></i>
-          </a>
+          <div class="nav__button">
+            <a href="#" class="nav__button-login">Login</a>
+            <a href="#" class="nav__button-try"
+              >Try Whitepace free
+              <i class="fa-solid fa-arrow-right"></i>
+            </a>
+          </div>
         </div>
       </nav>
     </header>
 
-    <section class="container__section1" id="section1">
+    <section class="section1__container" id="section1">
       <div>
         <div>
-          <h3 class="section1__title">Get More Done with <br />whitepace</h3>
+          <h3 class="section1__title">Get More Done with whitepace</h3>
+
           <p class="section1__content">
             Project management software that enables your teams to collaborate,
-            plan, <br />
-            analyze and manage everyday tasks
+            plan, analyze and manage everyday tasks
           </p>
         </div>
+
         <a href="#" class="section1__button">
           Try Whitepace free
           <i class="fa-solid fa-arrow-right"></i>
         </a>
       </div>
 
-      <div>
-        <div class="section1__img">
-          <img src="./acssets/img/img__image_section1.jpg" alt="..." />
-        </div>
+      <div class="section1__img">
+        <img src="./acssets/img/img_image_section1.jpg" alt="..." />
       </div>
     </section>
-
     <script
       src="https://kit.fontawesome.com/a2eca21ea1.js"
       crossorigin="anonymous"
