--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </nav>
     </header>
 
-    <section class="section1__container" id="section1">
+    <section id="section1" class="section1__container">
       <div>
         <div>
           <h3 class="section1__title">Get More Done with whitepace</h3>
