--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,8 +9,12 @@
     <link rel="stylesheet" href="index.css" />
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" /> -->
 </head>
+
 <body>
-    <img src="./assets/images/img_logo.png" />
+    <header>
+<div></div>
+    </header>
+    <img src="./assets/images/header__image--logo.png" />
     <div class="navbar">Products
         <i class="fa-regular fa-chevron-down"></i>
     </div>
@@ -27,4 +32,5 @@
     <button>Try Whitepace free</button>
     <script src="https://kit.fontawesome.com/1c39565260.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
