--- a/index.html
+++ b/index.html
@@ -2,35 +2,27 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="index.css" />
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" /> -->
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    <title>lam-html-css</title>
 </head>
 
 <body>
-    <header>
-<div></div>
-    </header>
-    <img src="./assets/images/header__image--logo.png" />
-    <div class="navbar">Products
-        <i class="fa-regular fa-chevron-down"></i>
-    </div>
-    <div class="navbar">Solutions
-        <i class="fa-regular fa-chevron-down"></i>
-    </div>
-    <div class="navbar">Resources
-        <i class="fa-regular fa-chevron-down"></i>
-    </div>
-    <div class="navbar">Pricing
-        <i class="fa-regular fa-chevron-down"></i>
-    </div>
-    <i class="fa-light fa-chevron-down"></i>
-    <button>Login</button>
-    <button>Try Whitepace free</button>
-    <script src="https://kit.fontawesome.com/1c39565260.js" crossorigin="anonymous"></script>
+    <section id="header">
+        <div><img src="./assets/images/header__image--logo.png" /></div>
+        <ul class="navbar__main">
+            <li><a class="navbar__main--link" href="#">Products</a><img class="navbar__main--image" src="./assets/images/navbar__main--image.png" /></li>
+            <li><a class="navbar__main--link" href="#">Solutions</a><img class="navbar__main--image" src="./assets/images/navbar__main--image.png" /></li>
+            <li><a class="navbar__main--link" href="#">Resources</a><img class="navbar__main--image" src="./assets/images/navbar__main--image.png" /></li>
+            <li><a class="navbar__main--link" href="#">Pricing</a><img class="navbar__main--image" src="./assets/images/navbar__main--image.png" /></li>
+            <button>Login</button>
+            <button>Try Whitepace free</button>
+        </ul>
+    </section>
+
 </body>
 
 </html>
