--- a/index.html
+++ b/index.html
@@ -7,22 +7,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/index.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&family=Inter:wght@400;500;700&display=swap"
+        rel="stylesheet">
     <title>lam-html-css</title>
 </head>
 
 <body>
-    <section id="header">
-        <div><img src="./assets/images/header__image--logo.png" /></div>
-        <ul class="navbar__main">
-            <li><a class="navbar__main--link" href="#">Products</a><img class="navbar__main--image" src="./assets/images/navbar__main--image.png" /></li>
-            <li><a class="navbar__main--link" href="#">Solutions</a><img class="navbar__main--image" src="./assets/images/navbar__main--image.png" /></li>
-            <li><a class="navbar__main--link" href="#">Resources</a><img class="navbar__main--image" src="./assets/images/navbar__main--image.png" /></li>
-            <li><a class="navbar__main--link" href="#">Pricing</a><img class="navbar__main--image" src="./assets/images/navbar__main--image.png" /></li>
-            <button>Login</button>
-            <button>Try Whitepace free</button>
-        </ul>
+    <section class="section-first">
+        <div class="section-first__header">
+            <div class="section-first__header-logo"><img class ="section-first__header-logo--image" src="./assets/images/section-first__header-logo--image.png" /></div>
+            <div class="section-first__header-navbar">
+                <div class="section-first__header-navbar--left">
+                    <div class="section-first__header-navbar--left-block-main"><a class="section-first__header-navbar--left-link-main" href="#">Products</a><img class="section-first__header-navbar--left-image-main-chevron-down" src="./assets/images/section-first__header-navbar--left-image-main-chevron-down.png" /></div>
+                    <div class="section-first__header-navbar--left-block-main"><a class="section-first__header-navbar--left-link-main" href="#">Solutions</a><img class="section-first__header-navbar--left-image-main-chevron-down" src="./assets/images/section-first__header-navbar--left-image-main-chevron-down.png" /></div>
+                    <div class="section-first__header-navbar--left-block-main"><a class="section-first__header-navbar--left-link-main" href="#">Resources</a><img class="section-first__header-navbar--left-image-main-chevron-down" src="./assets/images/section-first__header-navbar--left-image-main-chevron-down.png" /></div>
+                    <div class="section-first__header-navbar--left-block-main"><a class="section-first__header-navbar--left-link-main" href="#">Pricing</a><img class="section-first__header-navbar--left-image-main-chevron-down" src="./assets/images/section-first__header-navbar--left-image-main-chevron-down.png" /></div>
+                </div>
+                <div class="section-first__header-navbar--right">
+                    <button class="section-first__header-navbar--right-button-first">Login</button>
+                    <button class="section-first__header-navbar--right-button-second">Try Whitepace free<img class="section-first__header-navbar--right-button-second-image-arrow-right" src="./assets/images/section-first__header-navbar--right-button-second-image-arrow-right.png" /></button>
+                </div>
+            </div>
+        </div>
     </section>
-
 </body>
 
 </html>
