--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <section id="header">
-        <div class="header__image--banner"><img src="./assets/images/header__image--banner.png" /></div>
+        <div class="header__block--banner"><img class="header__image--banner" src="./assets/images/header__image--banner.png" /></div>
         <ul class="navbar__main">
             <li class="navbar__main--list"><a class="navbar__main--link" href="#home">HOME</a></li>
             <li class="navbar__main--list"><a class="navbar__main--link" href="#about">ABOUT</a></li>
@@ -69,7 +69,7 @@
     </section>
 
     <section id="footer">
-        <div class="footer__image--banner"><img src="./assets/images/footer__image--banner.png" /></div>
+        <div class="footer__block--banner"><img class="footer__image--banner" src="./assets/images/footer__image--banner.png" /></div>
     </section>
     <script src="./js/index.js"></script>
 </body>
